# image_enhancer

./: .gitignore  Makefile  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
main_app/: Dockerfile  main.py  pyproject.toml
main_app/app/adapters/ws/: ws_client.py
main_app/app/main/: main.py
main_app/app/routers/api/: event.py  index.py  text.py  ws_file.py
main_app/app/routers/broker/: text.py
main_app/app/s3/: s3.py
main_app/app/static/: file_script.js  input.css  output.css  script.js  styles.css  websocket_script.js  wsl_ink_script.js
main_app/app/templates/: index.html  webscocket.html  webscocket_link.html
main_app/src/app/adapters/s3/: s3_client.py
main_app/src/app/application/: add_file_event.py  put_file.py
main_app/src/app/domain/: entities.py
main_app/src/app/main/: config.py  main.py
main_app/src/app/presentation/schemas/: image.py
main_app/src/app/presentation/static/: file_script.js  output.css  websocket_script.js
main_app/src/app/presentation/templates/: index.html
main_app/src/app/presentation/web_api/api/: event.py  healtcheck.py  images.py  index.py  root.py  ws_file.py
main_app/src/app/presentation/web_api/broker/: nats_router.py
scripts/mc/: Dockerfile  script.sh
worker/: color_formatter.py  config.py  main.py  pyproject.toml
worker/adapters/pillow/: image_processor.py
worker/adapters/s3/: s3.py
worker/entities/: image.py
worker/s3/: s3.py
worker/servicies/: image_service.py
