# [tool.poetry]
# name = "main app"
# version = "0.1.0"
# description = ""
# authors = ["Konovalov Dmitriy <dkonowalow@gmail.com>"]
# readme = "README.md"

# [tool.poetry.dependencies]
# python = "^3.12"
# faststream = { extras = ["rabbit"], version = "^0.5.10" }


# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"


[project]
authors = [{ name = "Konovalov Dmitriy", email = "dkonowalow@gmail.com" }]
dependencies = [
    "faststream[rabbit]>=0.5.10",
    "watchfiles>=0.22",]
description = "Template for fastapi project with clean architecture and DDD"
name = "main-app"
requires-python = ">=3.12"
version = "0.1.0"
