# [tool.poetry]
# name = "main app"
# version = "0.1.0"
# description = ""
# authors = ["Konovalov Dmitriy <dkonowalow@gmail.com>"]
# readme = "README.md"

# [tool.poetry.dependencies]
# python = "^3.12"
# fastapi = { extras = ["all"], version = "^0.111.0" }
# faststream = { extras = ["nats"], version = "^0.5.10" }
# aiobotocore = "^2.13.0"
# dishka = "^1.2.0"
# pillow = "^10.3.0"


# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"


[project]
authors = [{ name = "Konovalov Dmitriy", email = "dkonowalow@gmail.com" }]
dependencies = [
    "faststream[nats]>=0.5.10",
    "watchfiles>=0.22",
    "fastapi[all]>=0.111.0",
    "aiobotocore>=2.13.0",
    "dishka>=1.2.0",]
description = "image processing service"
name = "image-processing-service"
requires-python = ">=3.12"
version = "0.1.0"
